crates/macro/tests/negative/mutability/missing_mut_borrow.stderr
error[E0308]: mismatched types
  --> tests/negative/mutability/missing_mut_borrow.rs:16:5
   |
16 | /     graph! {
17 | |         InvalidGraph<'a> {
18 | |             GetNumber() -> (&'a mut number) >>
...  |
22 | |     }
   | |     ^
   | |     |
   | |_____types differ in mutability
   |       arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut u32`
                      found reference `&u32`
note: associated function defined here
  --> tests/negative/mutability/missing_mut_borrow.rs:10:5
   |
10 | /     node! {
11 | |         fn bump(number: &mut u32) {
   | |                 ----------------
12 | |             *number += 1;
13 | |         }
14 | |     }
   | |_____^
   = note: this error originates in the macro `graph` which comes from the expansion of the macro `node` (in Nightly builds, run with -Z macro-backtrace for more info)
